# nccl-collective-notify

./: .gitignore  CMakeLists.txt  Makefile  README.en.md  README.md
agent/: CMakeLists.txt  Makefile  install_systemd.sh  nccl-agent.service.template  nccl_agent.cc  server.py
src/: enqueue.cc  init.cc
src/include/: collective_notify.h  comm.h  notify.h
src/misc/: CMakeLists.txt  collective_notify.cc
